k8s/apps/discord-broadcaster/resources/deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: deployment

spec:
  replicas: 1
  selector:
    matchLabels:
      app: default
  template:
    metadata:
      labels:
        app: default
    spec:
      containers:
        - name: server
          image: ghcr.io/slashnephy/discord-broadcaster:master@sha256:be255ce480c00887736e72fc1a9ebdda0f43b6d23ee96950e9ac2bc27a5bb9ea
          ports:
            - containerPort: 8080
          livenessProbe:
            httpGet:
              path: /status
              port: 8080
          securityContext:
            allowPrivilegeEscalation: false
        - name: redis
          image: public.ecr.aws/docker/library/redis:8.4.0-bookworm@sha256:43355efd22490e31ca14b9d569367d05121e2be61fd8e47937563ae2a80952ae
          ports:
            - containerPort: 6379
          securityContext:
            allowPrivilegeEscalation: false
      restartPolicy: Always
