k8s/apps/discord-broadcaster/resources/ingress.yaml
apiVersion: traefik.io/v1alpha1
kind: IngressRoute
metadata:
  name: route

spec:
  routes:
    - kind: Rule
      match: Host(`discord-broadcaster-api.starry.blue`)
      services:
        - name: server
          port: 8080
